<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grow_tekstura"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cifer" />

    <ImageView
        android:id="@+id/rotatingImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/rotating_image"
        android:scaleType="centerInside"
        android:src="@drawable/clock_is_running"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <ImageView
        android:id="@+id/offsetRotatingImage"
        android:layout_width="40dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/extra_element"
        android:src="@drawable/flag_3_thousand"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="210dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="100dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:srcCompat="@drawable/cifer_hour_3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:srcCompat="@drawable/cifer_hours_1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="240dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="115dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:srcCompat="@drawable/cifer_hour_2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom|center"
        android:text="@string/textview"
        android:textColor="#FF0000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTabloHours"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/pole_hours"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="bottom|center"
        android:hint="@string/app_name_2"
        android:inputType="number"
        android:numeric="signed"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Deprecated" />

    <ImageButton
        android:id="@+id/imageButtonSelect"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:background="@drawable/pole_hours"
        android:contentDescription="@string/app_name_fornum"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/editTabloHours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/cifer_hours_1" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#307E32"
        android:text="@string/start_x1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTabloHours"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTabloHours">

        <ImageButton
            android:id="@+id/ButtonBackArrow"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:importantForAccessibility="no"
            android:rotationY="180"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTabloHours"
            app:srcCompat="@drawable/arrows_in_circle" />

        <ImageButton
            android:id="@+id/buttonInter"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/arrow_metal"
            android:contentDescription="@string/app_name"
            android:gravity="bottom|center_horizontal"
            android:rotationX="180"
            android:text="@string/app_buttonInter"
            app:layout_constraintEnd_toStartOf="@+id/ButtonForwardArrow"
            app:layout_constraintStart_toEndOf="@+id/ButtonBackArrow"
            app:layout_constraintTop_toBottomOf="@+id/editTabloHours" />

        <ImageButton
            android:id="@+id/ButtonForwardArrow"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTabloHours"
            app:srcCompat="@drawable/arrows_in_circle" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#F44336"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_buttonReset"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
